--- a/3.html
+++ b/3.html
@@ -9,7 +9,7 @@
   <ol>
     <li><a href="1.html">HTML</a></li>
     <li><a href="2.html">CSS</a></li>
-    <li><a href="3.html">JaveScript</a></li>
+    <li><a href="3.html">JavaScript</a></li>
   </ol>
   <h2>JavaScript</h2>
   <p>JavaScript (/ˈdʒɑːvəskrɪpt/), often abbreviated JS, is a programming language that is one of the core technologies of the World Wide Web, alongside HTML and CSS. Over 97% of websites use JavaScript on the client side for web page behavior, often incorporating third-party libraries. All major web browsers have a dedicated JavaScript engine to execute the code on users' devices.
